fix: #11
deleted unused links
deleted scrollbar view for whole website

--- a/website/static/styles/base.css
+++ b/website/static/styles/base.css
@@ -4,6 +4,9 @@ body{
     background-attachment: fixed;
     background-size: cover;
 }
+body::-webkit-scrollbar{
+    display: none;
+}
 
 .navbar_custom{
     background: linear-gradient(rgba(78,19,175,1), rgba(56,0,163,1));
